Adjusts basic layout of homepage so that the spinner fit. Corrects the background colors. Adds desktop spacing for layout.

--- a/assets/styles/modules/_layout.scss
+++ b/assets/styles/modules/_layout.scss
@@ -6,6 +6,20 @@
 // *
 // *****************************************************************************
 
+body {
+  background-color: $color-page-bg;
+}
+
+.#{$namespace}wrapper {
+  display: flex;
+  flex-direction: column;
+  @include rem(margin, 20px);
+  @include rem(padding, 40px 20px);
+  height: 100%;
+  background-color: $color-wrapper-bg;
+  border: 1px solid $color-fg-on-dark;
+}
+
 // *****************************************************************************
 // * ADMIN
 // * Here we have to add some space if the WP admin bar is open as our theme
@@ -38,44 +52,4 @@ body.admin-bar {
   @include breakpoint($breakpoint-small) {
     display: inherit;
   }
-}
-
-// *****************************************************************************
-// * Basic site layout
-// *****************************************************************************
-
-.#{$namespace}site {
-  @include rem(padding, 10px 20px);
-  vertical-align: baseline;
-  transition: $animation-speed;
-
-  @include breakpoint($breakpoint-xsmall) {
-    @include rem(padding, 40px 30px);
-  }
-
-  @include breakpoint($breakpoint-small) {
-    @include rem(padding, 40px 40px);
-  }
-
-  @include breakpoint($breakpoint-large) {
-    @include rem(padding, 60px 60px);
-  }
-
-  &::before {
-    display: block;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    content: "";
-    background: radial-gradient(ellipse at center, rgba($color-white, 0) 0%, rgba($color-tint, 0.6) 100%);
-  }
-
-}
-
-.site-inner {
-  position: relative;
-  max-width: 1800px;
-  margin: 0 auto;
 }
