--- a/components/project-spinner/assets/styles/project-spinner.scss
+++ b/components/project-spinner/assets/styles/project-spinner.scss
@@ -16,4 +16,8 @@
     margin: 0 auto;
     text-align: center;
   }
+
+  svg {
+    width: 100%;
+  }
 }
